--- a/demo/kitchen-sink/docs/haml.haml
+++ b/demo/kitchen-sink/docs/haml.haml
@@ -5,20 +5,15 @@
 -# <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 -# <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 
-# file: app/controllers/movies_controller.rb
 
-class MoviesController < ApplicationController
-  def index
-    @title = "Teen Wolf"
-  end
-end
 /adasdasdad
 %div{:id => "#{@item.type}_#{@item.number}", :class => "#{@item.type} #{@item.urgency}"}
 -# file: app/views/movies/index.html.haml
 \d
+%ads:
 %p==ddd==
   Date/Time:
-  - now = DateTime.now
+  - now = DateTime.now 
   %strong= now
   - if now > DateTime.parse("December 31, 2006")
     = "Happy new " + "year!"
@@ -28,6 +23,7 @@ end
    %h1= @title
    = link_to 'Home', home_url
 
+   #contents
 %div#content
   %div.articles
     %div.article.title Blah
